<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="100dp"
    tools:context=".SecondAct">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_entered_information"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="35dp"
        android:textStyle="bold"
        android:textColor="#263B45"
        android:textSize="25sp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/your_name"
            android:textSize="19sp"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="19sp"
            android:layout_margin="10dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="40dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_at"
            android:textStyle="bold"
            android:textSize="19sp"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/tvNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="19sp"
            android:layout_margin="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="40dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_dob"
            android:textStyle="bold"
            android:textSize="19sp"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/tvDoB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="19sp"
            android:layout_margin="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/StudyL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/rstudy"
            android:textSize="19sp"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/tvStudy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="19sp"
            android:layout_margin="10dp"/>

    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:backgroundTint="#263B45"
        android:layout_gravity="start"
        android:layout_marginStart="40dp"
        android:layout_height="wrap_content"
        android:id="@+id/back"
        android:text="@string/back"/>
</LinearLayout>